# smolpc-codehelper

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGES.md  Cargo.toml  FEATURES.md  PROJECT_OVERVIEW.md  PROMPT.md  PR_SUMMARY.md  README.md  SESSION_LOG.md  claude.md  eslint.config.mjs  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/examples/: dml_probe.rs
app/src-tauri/libs/: README.md
app/src-tauri/nsis/: hooks.nsh
app/src-tauri/resources/launcher/: apps.manifest.json
app/src-tauri/resources/model-installer/: README.md
app/src-tauri/resources/models/: manifest.json
app/src-tauri/resources/python/: README.md  manifest.json
app/src-tauri/src/: app_paths.rs  lib.rs
app/src-tauri/src/assistant/: mod.rs  state.rs
app/src-tauri/src/commands/: assistant.rs  default.rs  engine_client_adapter.rs  errors.rs  hardware.rs  inference.rs  modes.rs
app/src-tauri/src/engine/: mod.rs  supervisor.rs
app/src-tauri/src/hardware/: mod.rs  types.rs
app/src-tauri/src/modes/: code.rs  config.rs  mod.rs  registry.rs
app/src-tauri/src/modes/blender/: bridge.rs  executor.rs  mod.rs  prompts.rs  provider.rs
app/src-tauri/src/modes/gimp/: executor.rs  heuristics.rs  mod.rs  provider.rs  runtime.rs  transport.rs
app/src-tauri/src/modes/libreoffice/: executor.rs  provider.rs  resources.rs  runtime.rs  state.rs
app/src-tauri/src/provisioning/: downloader.rs  extractor.rs  manifest.rs  mod.rs  singleton.rs  source.rs  types.rs
app/src-tauri/src/security/: mod.rs  tests.rs
app/src-tauri/src/setup/: blender.rs  gimp.rs  host_apps.rs  mod.rs  models.rs  provision.rs  python.rs  state.rs  status.rs  types.rs
apps/blender-assistant/src-tauri/: Cargo.toml  tauri.conf.json
apps/blender-assistant/src-tauri/capabilities/: default.json
apps/blender-assistant/src-tauri/resources/rag_system/: server.py
apps/blender-assistant/src-tauri/src/: addon_sync.rs  engine_integration.rs  logger.rs  main.rs  ollama.rs  prompts.rs  scene_bridge.rs  shared_engine.rs  state.rs
apps/blender-assistant/src-tauri/src/commands/: assistant.rs  generation.rs  mod.rs  scene.rs
apps/codehelper/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/codehelper/src-tauri/benchmarks/: README.md
apps/codehelper/src-tauri/binaries/: README.md
apps/codehelper/src-tauri/examples/: dml_probe.rs
apps/codehelper/src-tauri/libs/: README.md
apps/codehelper/src-tauri/src/: app_paths.rs  lib.rs
apps/libreoffice-assistant/src-tauri/: Cargo.toml  tauri.conf.json
apps/libreoffice-assistant/src-tauri/src/: lib.rs
connectors/blender/: Cargo.toml
connectors/blender/resources/: README.md  manifest.json
connectors/blender/resources/addon/: blender_helper_http.py
connectors/blender/src/: bridge.rs  executor.rs  lib.rs  prompts.rs  provider.rs  response.rs  setup.rs  state.rs
connectors/gimp/: Cargo.toml
connectors/gimp/resources/: manifest.json
connectors/gimp/src/: executor.rs  lib.rs  macros.rs  planner.rs  provider.rs  response.rs  runtime.rs  setup.rs  transport.rs
connectors/libreoffice/resources/mcp_server/: README.md  mcp_server.py  pyproject.toml  test_e2e.py
crates/smolpc-connector-common/: Cargo.toml
crates/smolpc-connector-common/src/: cancellation.rs  host_apps.rs  launch.rs  lib.rs  manifests.rs  provider.rs  python.rs  text_generation.rs
crates/smolpc-engine-core/: Cargo.toml
crates/smolpc-engine-core/src/hardware/: detector.rs  errors.rs
crates/smolpc-engine-core/src/inference/: backend.rs  backend_store.rs  benchmark.rs  kv_cache.rs  mod.rs  runtime_loading.rs  session.rs
crates/smolpc-engine-core/src/models/: loader.rs  mod.rs  registry.rs
crates/smolpc-engine-host/: Cargo.toml
crates/smolpc-engine-host/src/: main.rs  runtime_bundles.rs
engine/crates/smolpc-benchmark/: Cargo.toml
engine/crates/smolpc-benchmark/src/: compare.rs  config.rs  engine_lifecycle.rs  main.rs  memory.rs  output.rs  prompts.rs  reliability.rs  resource_sampler.rs  runner.rs  stats.rs
engine/crates/smolpc-engine-client/: Cargo.toml
engine/crates/smolpc-engine-client/src/: client.rs  lib.rs  spawn.rs  test_utils.rs  token.rs  version.rs
engine/crates/smolpc-engine-core/: Cargo.toml
engine/crates/smolpc-engine-core/src/: lib.rs
engine/crates/smolpc-tts-server/: Cargo.toml
engine/crates/smolpc-tts-server/src/: main.rs
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/libs/: .gitignore  README.md
launcher/src-tauri/resources/launcher/: apps.catalog.json  apps.manifest.json
launcher/src-tauri/src/: lib.rs  main.rs
launcher/src-tauri/src/commands/: engine.rs  launcher.rs  mod.rs
launcher/src-tauri/src/launcher/: catalog.rs  mod.rs  orchestrator.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benchmarks/: README.md  benchmark-2025-11-18_12-32-32.csv  benchmark-2025-11-18_19-02-10.csv  benchmark-2025-11-23_00-03-27.csv
src-tauri/capabilities/: default.json
src-tauri/examples/: dml_probe.rs
src-tauri/icons/: SmolPC.icns
src-tauri/libs/: README.md
src-tauri/mcp-servers/libreoffice/: README.md  helper.py  helper_utils.py  main.py  test_helper.py
src-tauri/mcp-servers/libreoffice/tests/: test_main.py  test_mcp.py
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/benchmark/: export.rs  metrics.rs  mod.rs  process.rs  runner.rs  sampling.rs  test_suite.rs
src-tauri/src/commands/: benchmark.rs  default.rs  engine_client_adapter.rs  hardware.rs  inference.rs  launcher.rs  libreoffice.rs  mod.rs  ollama.rs
src-tauri/src/hardware/: cpu.rs  detector.rs  gpu.rs  mod.rs  npu.rs  types.rs
src-tauri/src/inference/: backend.rs  backend_store.rs  benchmark.rs  generator.rs  input_builder.rs  kv_cache.rs  mod.rs  runtime_adapter.rs  session.rs  tokenizer.rs  types.rs
src-tauri/src/inference/genai/: directml.rs
src-tauri/src/launcher/: orchestrator.rs
src-tauri/src/libreoffice/: mcp_client.rs  mod.rs  process_manager.rs  types.rs
src-tauri/src/models/: loader.rs  mod.rs  registry.rs  runtime_spec.rs
src-tauri/src/security/: mod.rs
(+618 files in other folders)
