[workspace]
members = [
  "app/src-tauri",
  "crates/smolpc-assistant-types",
  "crates/smolpc-connector-common",
  "crates/smolpc-mcp-client",
  "connectors/blender",
  "connectors/gimp",
  "connectors/libreoffice",
  "engine/crates/smolpc-engine-core",
  "engine/crates/smolpc-engine-host",
  "engine/crates/smolpc-engine-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2.0.12"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["macros"] }
async-stream = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
async-trait = "0.1"
rand = "0.8"
rand_distr = "0.4"
url = "2.5"
anyhow = "1.0"
hardware-query = "0.2.1"
windows = { version = "0.59.0", features = ["Win32_Graphics_Dxgi", "Win32_System_SystemInformation"] }
half = "2.4"
libloading = "0.8"
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }
dirs = "6"
env_logger = "0.11"
sysinfo = { version = "=0.32.1" }
