[package]
name = "smolpc-codehelper"
version = "0.1.0"
description = "SmolPC Code Helper"
authors = ["SmolPC Team"]
edition = "2021"

[lib]
name = "smolpc_codehelper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "smolpc-codehelper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rfd = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
