[package]
name = "smolpc-launcher"
version = "1.0.0"
description = "SmolPC Launcher — hub for launching AI helper apps with shared engine"
authors = ["SmolPC Team"]
license = "MIT"
edition = "2021"
rust-version = "1.88"
default-run = "smolpc-launcher"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
sysinfo = "0.32"
smolpc-engine-client = { path = "../../engine/crates/smolpc-engine-client" }
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
rfd = "0.15"
