[package]
name = "smolpc-code-helper"
version = "2.2.0"
description = "SmolPC CodeHelper desktop app using the shared SmolPC inference engine"
authors = ["SmolPC Team"]
license = "MIT"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = { workspace = true }
rfd = "0.15.4"
dirs = "6"
smolpc-assistant-types = { path = "../../../crates/smolpc-assistant-types" }
smolpc-mcp-client = { path = "../../../crates/smolpc-mcp-client" }
smolpc-engine-core = { path = "../../../engine/crates/smolpc-engine-core" }
smolpc-engine-client = { path = "../../../engine/crates/smolpc-engine-client" }

# Benchmarking dependencies
sysinfo = "0.32"
csv = "1.3"
chrono = "0.4"

# Hardware detection
hardware-query = "0.2.1"

[dev-dependencies]
tempfile = "3.13"
smolpc-engine-client = { path = "../../../engine/crates/smolpc-engine-client", features = ["test-utils"] }
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic", "ndarray", "half", "directml"] }
ndarray = "0.17"
half = "2.4"
libloading = "0.8"
