[package]
name = "smolpc-benchmark"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone inference benchmark CLI for SmolPC engine"

[[bin]]
name = "smolpc-benchmark"
path = "src/main.rs"

[dependencies]
smolpc-engine-client = { path = "../smolpc-engine-client" }
smolpc-engine-core = { path = "../smolpc-engine-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
clap = { version = "4", features = ["derive"] }
sysinfo = { workspace = true }
