[package]
name = "smolpc-engine-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[dependencies]
smolpc-engine-core = { path = "../smolpc-engine-core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }
