[project]
name = "libreoffice-mcp"
version = "0.2.0"
description = "LibreOffice document MCP server using python-docx, python-pptx, and odfdo"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "fastmcp",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "odfdo>=3.20.0",
    "Pillow>=10.0.0",
]
